--- a/modules/prometheus_exporter/templates/exporter-values.yaml
+++ b/modules/prometheus_exporter/templates/exporter-values.yaml
@@ -83,6 +83,8 @@ affinity: ${affinity}
 # Extra environment variables
 extraEnv: ${env}
 
+podAnnotations: ${pod_annotations}
+
 initContainers: ${init_containers}
 
 # Extra containers for the exporter pod
