Minor updates to chart v0.36.0

--- a/templates/values.yaml
+++ b/templates/values.yaml
@@ -113,26 +113,21 @@ global:
   # created by this chart. See https://kubernetes.io/docs/concepts/policy/pod-security-policy/.
   enablePodSecurityPolicies: ${pod_security_policy_enable}
 
-  # Configures which Kubernetes secret to retrieve Consul's
-  # gossip encryption key from (see `-encrypt` (https://consul.io/docs/agent/options#_encrypt)). If secretName or
-  # secretKey are not set, gossip encryption will not be enabled. The secret must
-  # be in the same namespace that Consul is installed into.
+  # Configures Consul's gossip encryption key, set as a Kubernetes secret
+  # (see `-encrypt` (https://consul.io/docs/agent/options#_encrypt)).
+  # By default, gossip encryption is not enabled. The gossip encryption key may be set automatically or manually.
+  # The recommended method is to automatically generate the key.
+  # To automatically generate and set a gossip encryption key, set autoGenerate to true.
+  # Values for secretName and secretKey should not be set if autoGenerate is true.
+  # To manually generate a gossip encryption key, set secretName and secretKey and use Consul to generate
+  # a Kubernetes secret referencing these values.
   #
-  # The secret can be created by running:
-  #
-  # ```shell
+  # ```
   # $ kubectl create secret generic consul-gossip-encryption-key --from-literal=key=$(consul keygen)
   # ```
-  #
-  # To reference, use:
-  #
-  # ```yaml
-  # global:
-  #   gossipEncryption:
-  #     secretName: consul-gossip-encryption-key
-  #     secretKey: key
-  # ```
   gossipEncryption:
+    # Automatically generate a gossip encryption key and save it to a Kubernetes secret.
+    autoGenerate: false
     # secretName is the name of the Kubernetes secret that holds the gossip
     # encryption key. The secret must be in the same namespace that Consul is installed into.
     secretName: ${gossip_secret}
@@ -589,6 +584,19 @@ server:
   # @type: array<map>
   extraVolumes: ${server_extra_volumes}
 
+  # A list of sidecar containers.
+  # Example:
+  #
+  # ```yaml
+  # extraContainers:
+  # - name: extra-container
+  #   image: example-image:latest
+  #   command:
+  #    - ...
+  # ```
+  # @type: array<map>
+  extraContainers: []
+
   # This value defines the affinity (https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity)
   # for server pods. It defaults to allowing only a single server pod on each node, which
   # minimizes risk of the cluster becoming unusable if a node is lost. If you need
@@ -902,6 +910,19 @@ client:
   #
   # @type: array<map>
   extraVolumes: ${client_extra_volumes}
+
+  # A list of sidecar containers.
+  # Example:
+  #
+  # ```yaml
+  # extraContainers:
+  # - name: extra-container
+  #   image: example-image:latest
+  #   command:
+  #    - ...
+  # ```
+  # @type: array<map>
+  extraContainers: []
 
   # Toleration Settings for Client pods
   # This should be a multi-line string matching the Toleration array
@@ -1564,6 +1585,11 @@ connectInject:
   # See https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-namespaceselector
   # for more details.
   #
+  # By default, we exclude the kube-system namespace since usually users won't
+  # want those pods injected and also the local-path-storage namespace so that
+  # Kind (Kubernetes In Docker) can provision Pods used to create PVCs.
+  # Note that this exclusion is only supported in Kubernetes v1.21.1+.
+  #
   # Example:
   #
   # ```yaml
@@ -1795,13 +1821,12 @@ controller:
     # # @type: string
     # secretKey: null
 
-
 # Mesh Gateways enable Consul Connect to work across Consul datacenters.
 meshGateway:
   # If mesh gateways are enabled, a Deployment will be created that runs
   # gateways and Consul Connect will be configured to use gateways.
   # See https://www.consul.io/docs/connect/mesh_gateway.html
-  # Requirements: consul >= 1.6.0 and consul-k8s-control-plane >= 0.9.0 if using
+  # Requirements: consul 1.6.0+ if using
   # global.acls.manageSystemACLs.
   enabled: false
 
@@ -1860,7 +1885,7 @@ meshGateway:
     port: 443
 
     # Optionally set the nodePort value of the service if using a NodePort service.
-    # If not set and using type: NodePort, Kubernetes will automatically assign
+    # If not set and using a NodePort service, Kubernetes will automatically assign
     # a port.
     # @type: integer
     nodePort: null
@@ -1919,6 +1944,11 @@ meshGateway:
     # @type: string
     annotations: null
 
+  # Resource settings for mesh gateway pods.
+  # NOTE: The use of a YAML string is deprecated. Instead, set directly as a
+  # YAML map.
+  # @recurse: false
+  # @type: map
   resources:
     requests:
       memory: "100Mi"
@@ -1928,6 +1958,8 @@ meshGateway:
       cpu: "100m"
 
   # Resource settings for the `copy-consul-bin` init container.
+  # @recurse: false
+  # @type: map
   initCopyConsulContainer:
     resources:
       requests:
@@ -1935,6 +1967,18 @@ meshGateway:
         cpu: "50m"
       limits:
         memory: "150Mi"
+        cpu: "50m"
+
+  # Resource settings for the `service-init` init container.
+  # @recurse: false
+  # @type: map
+  initServiceInitContainer:
+    resources:
+      requests:
+        memory: "50Mi"
+        cpu: "50m"
+      limits:
+        memory: "50Mi"
         cpu: "50m"
 
   # By default, we set an anti-affinity so that two gateway pods won't be
@@ -1949,7 +1993,6 @@ meshGateway:
               release: "{{ .Release.Name }}"
               component: mesh-gateway
           topologyKey: kubernetes.io/hostname
-
   # Optional YAML string to specify tolerations.
   # @type: string
   tolerations: null
